# The-floor

./: .gitignore  TheFloor.spec  excel.csv  main.py  pyproject.toml
.github/workflows/: build.yml
images/Flagi/: Francja.avif  Portugalia.avif
images/Kuchnia polska/: Chłodnik.jfif  Naleśniki.jfif  żurek w chlebie.jfif
images/Na wsi/: Świnia.avif
images/W mieście/: Biurowiec.avif  Zajezdnia autobusowa.avif
