[tool.poetry]
name = "thefloor"
version = "0.1.0"
description = ""
authors = ["piotrbranewski <pbranewski@student.agh.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
PyQt5 = "^5.15"
Pillow = "^10.0"
pillow-avif-plugin = "^1.4"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
